// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChromeFormatters > ArrayFormatter formats observable array 1`] = `null`;

exports[`ChromeFormatters > ArrayFormatter formats observable array 2`] = `
[
  "ol",
  {
    "style": "list-style-type: none; padding: 0; margin: 0 0 0 12px; font-style: normal",
  },
  [
    "li",
    [
      "object",
      {
        "object": {
          "age": 23,
          "name": "Test 1",
        },
      },
    ],
  ],
  [
    "li",
    [
      "object",
      {
        "object": {
          "age": 55,
          "name": "Test 2",
        },
      },
    ],
  ],
  [
    "li",
    [
      "object",
      {
        "object": {
          "age": 99,
          "name": "Test 2",
        },
      },
    ],
  ],
]
`;

exports[`ChromeFormatters > MapFormatter formats observable map 1`] = `
[
  "span",
  [
    "span",
    {
      "style": "color: rgb(232,98,0)",
    },
    "Map",
  ],
  [
    "span",
    "[2]",
  ],
]
`;

exports[`ChromeFormatters > MapFormatter formats observable map 2`] = `
[
  "ol",
  {
    "style": "list-style-type: none; padding: 0; margin: 0 0 0 12px; font-style: normal",
  },
  [
    "li",
    {},
    [
      "object",
      {
        "object": "a",
      },
    ],
    ": ",
    [
      "object",
      {
        "object": 1,
      },
    ],
  ],
  [
    "li",
    {},
    [
      "object",
      {
        "object": "b",
      },
    ],
    ": ",
    [
      "object",
      {
        "object": 2,
      },
    ],
  ],
]
`;

exports[`ChromeFormatters > ObjectFormatter formats object with computeds 1`] = `
[
  "span",
  [
    "span",
    {
      "style": "color: rgb(232,98,0)",
    },
    "Object",
  ],
  [
    "span",
    "[2]",
  ],
]
`;

exports[`ChromeFormatters > ObjectFormatter formats object with computeds 2`] = `
[
  "ol",
  {
    "style": "list-style-type: none; padding: 0; margin: 0 0 0 12px; font-style: normal",
  },
  [
    "li",
    {},
    [
      "object",
      {
        "object": "age",
      },
    ],
    ": ",
    [
      "object",
      {
        "object": 23,
      },
    ],
  ],
  [
    "li",
    {},
    [
      "object",
      {
        "object": "name",
      },
    ],
    ": ",
    [
      "object",
      {
        "object": "Test",
      },
    ],
  ],
  [
    "li",
    {},
    [
      "object",
      {
        "object": "isAllowed",
      },
    ],
    ": ",
    [
      "object",
      {
        "object": true,
      },
    ],
  ],
  [
    "li",
    {},
    [
      "object",
      {
        "object": "json",
      },
    ],
    ": ",
    [
      "object",
      {
        "object": {
          "age": 23,
          "name": "Test",
        },
      },
    ],
  ],
]
`;

exports[`ChromeFormatters > SetFormatter formats observable set 1`] = `
[
  "span",
  [
    "span",
    {
      "style": "color: rgb(232,98,0)",
    },
    "Set",
  ],
  [
    "span",
    "[3]",
  ],
]
`;

exports[`ChromeFormatters > SetFormatter formats observable set 2`] = `
[
  "ol",
  {
    "style": "list-style-type: none; padding: 0; margin: 0 0 0 12px; font-style: normal",
  },
  [
    "li",
    [
      "object",
      {
        "object": 1,
      },
    ],
  ],
  [
    "li",
    [
      "object",
      {
        "object": 2,
      },
    ],
  ],
  [
    "li",
    [
      "object",
      {
        "object": 3,
      },
    ],
  ],
]
`;
